--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodeman index.js"
+    "start": "nodemon index.js"
   },
   "author": "Shubham Arya",
   "license": "ISC",
