--- a/Server/package.json
+++ b/Server/package.json
@@ -13,10 +13,11 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
     "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
+    "latest-version": "^7.0.0",
     "mongoose": "^7.3.2",
+    "mongoose-update-if-current": "^1.4.0",
     "nodemon": "^3.0.0"
   }
 }
